<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter"
        android:paddingTop="300dp"
        android:textSize="32sp"
        android:paddingHorizontal="100dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SMS"
        android:paddingHorizontal="100dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:autofillHints=""
        android:hint="@string/Phone"
        android:paddingHorizontal="100dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"

        android:hapticFeedbackEnabled="false"
        android:text="@string/GetCode" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Conditions" />
</LinearLayout>